# MessagerieSecure

./: .dockerignore  .gitignore  Dockerfile  composer.json  docker-compose.yml  spam_logs.txt
app/Http/: Kernel.php
app/Models/: ApprovedSender.php  Blacklist.php  Email.php  EmailTemplate.php  EmailTracking.php  Message.php  SecureMessage.php  User.php  Whitelist.php
app/Services/: SpamClassifierService.php
config/: app.php  mail.php  services.php
data/: corpus.csv  corpus_shuffled.csv  test.csv  train.csv
database/factories/: UserFactory.php
database/migrations/: 0001_01_01_000000_create_users_table.php  2025_04_27_000001_create_messages_table.php  2025_04_27_115839_add_status_to_messages_table.php  2025_05_02_093635_add_piece_jointe_to_messages_table.php  2025_05_02_094011_add_expediteur_id_to_messages_table.php  2025_07_01_182204_create_secure_messages_table.php  2025_07_01_182206_create_email_trackings_table.php  2025_07_01_195816_create_secure_messages_table.php  2025_07_01_195819_create_email_trackings_table.php  2025_07_01_195820_create_email_templates_table.php  2025_07_01_205902_add_security_columns_to_users_table.php  2025_07_01_210645_add_missing_columns_to_users_table.php  2025_07_01_221654_create_emails_table.php  2025_07_02_092621_create_blacklists_table.php  2025_07_03_154415_add_signature_verified_to_emails_table.php  (+6 more)
nginx/: site.conf
routes/: api.php  web.php
scripts/: parse_logs.py  read_logs.py
spam_classifier/: Cargo.toml  Dockerfile
spam_classifier/src/: data.rs  lib.rs  main.rs  model.rs  train.rs  vectorizer.rs
(+63 files in other folders)
