[package]
name = "spam_classifier"
version = "0.1.0"
edition = "2021"

[dependencies]
csv = "1.3"
ndarray = "0.15"
regex = "1.10"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.0", features = ["full"] }
warp = "0.3"
serde_json = "1.0"
anyhow = "1.0"

[[bin]]
name = "train"
path = "src/train.rs"

[[bin]]
name = "spam_classifier"
path = "src/main.rs"